<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.thaya.shop_family.ui.fragments.LoginFragment"
        android:label="@string/title_login">
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            android:name="com.thaya.shop_family.ui.fragments.action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.thaya.shop_family.ui.fragments.HomeFragment"
        android:label="@string/title_home">
        <action
            android:id="@+id/action_homeFragment_to_loginFragment"
            android:name="com.thaya.shop_family.ui.fragments.action_homeFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_homeFragment_to_groupListFragment"
            app:destination="@id/groupListFragment" />
    </fragment>

    <fragment
        android:id="@+id/groupListFragment"
        android:name="com.thaya.shop_family.ui.fragments.GroupListFragment"
        android:label="@string/title_groups">
        <action
            android:id="@+id/action_groupListFragment_to_itemListFragment"
            app:destination="@id/itemListFragment" />
    </fragment>

    <fragment
        android:id="@+id/itemListFragment"
        android:name="com.thaya.shop_family.ui.fragments.ItemListFragment"
        android:label="@string/title_items">
        <action
            android:id="@+id/action_itemListFragment_to_groupUsersFragment"
            app:destination="@id/groupUsersFragment" />
    </fragment>

    <fragment
        android:id="@+id/groupUsersFragment"
        android:name="com.thaya.shop_family.ui.fragments.GroupUsersFragment"
        android:label="@string/title_users" />
</navigation>
